 - #4222, [raster] ST_DumpAsPolygons honours PostgreSQL interrupts (Darafei Praliaskouski)
 - #5109, Document the meaning of topology.next_left_edge and topology.next_right_edge links (Darafei Praliaskouski)
 - #5889, [topology] Include representative locations in topology build errors (Darafei Praliaskouski)

* Bug Fixes *

 - #5948, [topology] Prevent MakeTopologyPrecise from erasing edges when
          grid size exceeds their extent (Darafei Praliaskouski)
 - #5959, Prevent histogram target overflow when analysing massive tables (Darafei Praliaskouski)
 - #4828, geometry_columns handles NOT VALID SRID checks without errors (Darafei Praliaskouski)
 - #5645, Docs: keep code operators ("=>") intact in translated manuals
          by enforcing verbatim CSS (Darafei Praliaskouski)
 - #5593, Docs: render manual images with GraphicsMagick without temporary files,
          enabling parallel builds, keeping ImageMagick fallbacks working, and
          documenting the generator workflow for contributors (Darafei Praliaskouski)

PostGIS 3.6.0
2025/09/01

This version requires PostgreSQL 12-18beta3, GEOS 3.8 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.14+ is needed.
To take advantage of all SFCGAL features, SFCGAL 2.2+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Daniel Nylander (Swedish Team)
Dapeng Wang, Zuo Chenwei from HighGo (Chinese Team)
Denys Kovshun (Ukrainian Team)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)
  - #5829, remove constraint checking from geometry_columns view (Paul Ramsey)
  - #3373, GT-255, [topology] Support for upgrading domains (Ayo Adesugba, U.S. Census Bureau)
  - GT-252, ST_NumGeometries/ST_GeometryN treat TIN and PolyhedralSurface as unitary geometries,
    use ST_NumPatches/ST_PatchN for patch access (Loïc Bartoletti)
  - #3110, GT-242 [topology] Support for bigint (Ayo Adesugba, U.S. Census Bureau)