@@ -24,6 +24,7 @@ xxxx/xx/xx
  - #4222, [raster] ST_DumpAsPolygons honours PostgreSQL interrupts (Darafei Praliaskouski)
  - #5109, Document the meaning of topology.next_left_edge and topology.next_right_edge links (Darafei Praliaskouski)
  - #5889, [topology] Include representative locations in topology build errors (Darafei Praliaskouski)
+ - #2614, Use GEOSPreparedDistance and caching to accelerate ST_DWithin (Paul Ramsey)
 
 * Bug Fixes *
 
